Fixed the nesting and no gap bug

--- a/style.css
+++ b/style.css
@@ -236,27 +236,16 @@ form.search button {
 .dashboard{
   padding:15px;
   display:grid;
-  grid-template-columns: auto max(260px);
-  grid-template-columns: repeat(2,auto)
+  grid-template-columns: auto 240px;
   padding:20px;
   gap:20px;
 }
 
 .your-project{
   grid-column:1/2;
-  grid-row:1/3;
 }
 
-.announcements{
-  grid-column:2/3;
-  grid-row:1/2;
-}
-
-.trending{
-  grid-column:2/3;
-  grid-row:2/3;
-}
-
+/*articles card {{{*/
 .article{
   display:grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -281,32 +270,29 @@ form.search button {
 }
 /*}}}*/
 
-.side-dashboard{
-  grid-template-columns: auto;
-  row-gap:50px;
-  background-color: green;
+#side-db{
+  background-color: lightgrey;
+  grid-column:2/3;
+  gap:10px;
+  display:grid;
+  margin:10px;
+  padding:10px;
 }
+
+.announce-bar,
+.trending-bar{
+  padding:10px;
+  grid-row:2/3;
+}
+
 .announce-bar{
   grid-row:1/2;
-  background-color: red;
+  background-color: purple;
+  height:500px;
 }
-
-.trending{
+.trending-bar{
   grid-row:2/3;
-  background-color: black;
-  gap:20px;
+  background-color: red;
+  height:500px;
+
 }
-
-.announcements{
-  display:grid;
-  grid-template-rows: repeat(3, minmax(30px));
-  gap:15px;
-}
-
-.announce{
-  padding:4px;
-  background-color: var(--color2);
-}
-
-
-
